[gd_scene load_steps=6 format=2]

[ext_resource path="res://World/Center.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/EnemyMaster.gd" type="Script" id=3]
[ext_resource path="res://World/CrapWorld.png" type="Texture" id=4]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 908.961, -728.653, 1120.17, -732.754, 1020.84, -482.487, 911.244, -554.407, 883.846, -503.035, 924.943, -342.07, 763.978, -403.717, 849.598, -270.15, 657.81, -222.203, 469.447, -235.902, 513.969, -277, 582.465, -136.583, 455.748, -74.9372, 582.465, -50.9637, 541.367, 51.7799, 709.182, 123.7, 558.491, 103.152, 750.279, 620.294, 483.146, 599.746, 448.898, 579.197, 431.774, 455.905, 435.199, 274.391, 459.172, 127.125, 798.226, 171.647, 842.748, 253.842, 832.474, 473.029, 822.2, 582.622, 846.173, 544.949 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 3, 2, 5 ), PoolIntArray( 6, 4, 5, 7, 8 ), PoolIntArray( 9, 10, 6, 8, 11, 12 ), PoolIntArray( 12, 11, 13, 14 ), PoolIntArray( 14, 13, 15, 16 ), PoolIntArray( 17, 18, 19, 20, 21, 22, 16, 15, 23, 24, 25, 26 ), PoolIntArray( 26, 25, 27 ) ]
outlines = [ PoolVector2Array( 908.961, -728.653, 911.244, -554.407, 883.846, -503.035, 763.978, -403.717, 513.969, -277, 469.447, -235.902, 455.748, -74.9372, 541.367, 51.7799, 558.491, 103.152, 459.172, 127.125, 435.199, 274.391, 431.774, 455.905, 448.898, 579.197, 483.146, 599.746, 750.279, 620.294, 822.2, 582.622, 846.173, 544.949, 832.474, 473.029, 842.748, 253.842, 798.226, 171.647, 709.182, 123.7, 582.465, -50.9637, 582.465, -136.583, 657.81, -222.203, 849.598, -270.15, 924.943, -342.07, 1020.84, -482.487, 1120.17, -732.754 ) ]

[node name="World" type="Node2D"]

[node name="Background" type="Sprite" parent="."]
position = Vector2( 778.765, 483.518 )
texture = ExtResource( 4 )

[node name="Center" type="Node2D" parent="."]
position = Vector2( 640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="Center"]
modulate = Color( 0.219608, 1, 0, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 536.129, 242.177 )

[node name="EnemyMaster" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="SpawnedEnemies" type="Node2D" parent="EnemyMaster"]

[node name="EnemySpawnPoints" type="Node2D" parent="EnemyMaster"]
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnPointN" type="Node2D" parent="EnemyMaster/EnemySpawnPoints"]
position = Vector2( 990.655, -679.667 )

[node name="SpawnPointS" type="Node2D" parent="EnemyMaster/EnemySpawnPoints"]
position = Vector2( 640, 1360 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnPointE" type="Node2D" parent="EnemyMaster/EnemySpawnPoints"]
position = Vector2( -360, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="SpawnPointW" type="Node2D" parent="EnemyMaster/EnemySpawnPoints"]
position = Vector2( 1640, 360 )
__meta__ = {
"_edit_lock_": true
}

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -1149.21, 319.81, -1039.16, 251.504, -800.086, 274.273, -500.298, 259.094, -265.022, 73.1494, -109.436, 84.5338, 57.5339, 171.814, 391.474, 209.761, 433.217, 80.739, 501.523, 80.739, 410.448, -90.026, 440.806, -279.765, 748.183, -442.94, 896.179, -549.194, 896.179, -598.526, -1145.41, -590.936 )

[node name="StaticBody2D2" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D2"]
polygon = PoolVector2Array( 1103.03, -598.929, 1092.76, -540.708, 1048.24, -448.239, 962.616, -331.796, 890.695, -232.477, 674.934, -174.256, 609.863, -119.459, 623.562, -57.8132, 733.155, 99.7269, 784.527, 89.4525, 849.598, 157.948, 866.722, 205.895, 890.695, 226.444, 1120.16, 246.993, 1377.01, 250.417, 1507.16, 233.294, 1585.93, 113.426, 1657.85, 75.7534, 1877.03, 92.8773, 1966.08, 161.373, 2034.57, 229.869, 2085.95, 291.515, 2168.14, 329.188, 2318.83, 318.913, 2438.7, 267.541, 2558.57, 154.523, 2620.21, 133.975, 2692.13, 137.4, 2702.41, -598.929 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Navigation2D"]
navpoly = SubResource( 1 )
[connection signal="enemy_killed" from="EnemyMaster" to="Player" method="_on_Enemy_Master_enemy_killed"]
[connection signal="new_enemy" from="EnemyMaster" to="Player" method="_on_Enemy_Master_new_enemy"]
